[파랑] 9월7일 계획 (#900)
* [파랑] 9월7일 계획

* [파랑] 9월7일 계획완료

--- a/파랑/9월5일~9월11일.md
+++ b/파랑/9월5일~9월11일.md
@@ -3,3 +3,10 @@
 - [x] 14시 팀플
 - [x] 16시 근로 회의
 - [x] 강의 및 실습 제출
+
+### 9월 7일 (수)
+- [x] 미션 2, 3단계
+- [x] 13시 달록 백엔드 회의
+- [x] 14시 달록 스프린트 회의
+- [x] 17시 근로 회의
+- [x] 19시 근로 자동채점 페어 시작
