--- a/코린/9월5일-9월11일.md
+++ b/코린/9월5일-9월11일.md
@@ -9,6 +9,6 @@
 - [x] 미션 2단계 리팩터링
 
 ## 9월7일
-- [ ] 팀 회의
-- [ ] 미션을 제발 끝내고 싶어..
-- [ ] 알고리즘 1개 풀기
+- [x] 팀 회의
+- [x] 미션을 제발 끝내고 싶어..
+- [x] 알고리즘 1개 풀기
