--- a/에덴/9월5일-9월11일.md
+++ b/에덴/9월5일-9월11일.md
@@ -15,8 +15,8 @@
 
 ## 9월 7일
 
-- [ ] 데일리 회의
-- [ ] 근로 회의
-- [ ] 미션 2단계 리팩토링
-- [ ] 쓰레드 공부 많이하기
-- [ ] 운동
+- [x] 데일리 회의
+- [x] 근로 회의
+- [x] 미션 2단계 리팩토링
+- [x] 쓰레드 공부 많이하기
+- [x] 운동
