--- a/에덴/9월5일-9월11일.md
+++ b/에덴/9월5일-9월11일.md
@@ -12,3 +12,11 @@
 - [x] 수업 듣고 숙제하기
 - [x] 미션 2단계 제출
 - [x] 운동
+
+## 9월 7일
+
+- [x] 데일리 회의
+- [x] 근로 회의
+- [x] 미션 2단계 리팩토링
+- [x] 쓰레드 공부 많이하기
+- [x] 운동
