--- a/앨버/9월5일~9월8일.md
+++ b/앨버/9월5일~9월8일.md
@@ -13,3 +13,14 @@
 - [x] javascript 책 읽기 (30분)
 - [x] 키워드 정리 (1시간)
 - [x] 네트워크 강의 하나 보기
+
+
+## 9월 7일
+
+- [x] 미션 피드백 답변 (10:30 ~ 12:00)
+- [x] 프로젝트 (13:00 ~ 16:00)
+- [x] javascript 책 읽기 + 탐구 (1시간) (16:00 ~ 17:00)
+- [x] 블로그 밀린 거 업로드 (17:00 ~ 18:00)
+- [x] 스터디 과제 (2시간) (19:00 ~ 21:00)
+- [x] 키워드 정리 (30분)
+- [x] 알고리즘 1문제
