[민초] 9월 8일 계획

--- a/민초/9월5일-9월8일.md
+++ b/민초/9월5일-9월8일.md
@@ -20,3 +20,11 @@
 - [x] 이펙티브 타스 아이템 6 읽고 정리
 - [x] 앨버 피드백 남기기
 - [x] 미션 피드백 반영 후 리뷰 요청 보내기
+
+# 9.8
+
+- [ ] 이펙티브 타스 아이템 7 읽고 정리
+- [ ] 이펙티브 타스 아이템 8 읽고 정리
+- [ ] 이펙티브 타스 아이템 9 읽고 정리
+- [ ] 우아한반상회 발표 자료 준비 (webpack codesplitting)
+- [ ] 프로젝트 이슈 처리
