--- a/앨버/9월5일~9월8일.md
+++ b/앨버/9월5일~9월8일.md
@@ -24,3 +24,12 @@
 - [x] 스터디 과제 (2시간) (19:00 ~ 21:00)
 - [x] 키워드 정리 (30분)
 - [x] 알고리즘 1문제
+
+
+## 9월 8일
+
+- [ ] 회고 (13:00 ~ 14:00)
+- [ ] 프로젝트 페어 (14:00 ~ 17:00)
+- [ ] 이펙티브 타입스크립트 1강 듣기 (17:00 ~ 18:00)
+- [ ] CORS 과제 진행 (19:00 ~ 21:00)
+- [ ] 하루 공부 회고 및 공부 계획 세우기
