--- a/앨버/9월5일~9월8일.md
+++ b/앨버/9월5일~9월8일.md
@@ -28,8 +28,8 @@
 
 ## 9월 8일
 
-- [ ] 회고 (13:00 ~ 14:00)
-- [ ] 프로젝트 페어 (14:00 ~ 17:00)
-- [ ] 이펙티브 타입스크립트 1강 듣기 (17:00 ~ 18:00)
-- [ ] CORS 과제 진행 (19:00 ~ 21:00)
-- [ ] 하루 공부 회고 및 공부 계획 세우기
+- [x] 회고 (13:00 ~ 14:00)
+- [x] 프로젝트 페어 (14:00 ~ 17:00)
+- [x] 이펙티브 타입스크립트 1강 듣기 (17:00 ~ 18:00)
+- [ ] 알고리즘 문제 2개 풀기 (CORS 과제 진행은 내일 하기로~ 졸려서 안되겠음)
+- [x] 하루 공부 회고 및 공부 계획 세우기
