--- a/앨버/9월5일~9월11일.md
+++ b/앨버/9월5일~9월11일.md
@@ -33,3 +33,11 @@
 - [x] 이펙티브 타입스크립트 1강 듣기 (17:00 ~ 18:00)
 - [x] 알고리즘 문제 2개 풀기 (CORS 과제 진행은 내일 하기로~ 졸려서 안되겠음)
 - [x] 하루 공부 회고 및 공부 계획 세우기
+
+
+## 9월 9일
+
+- [ ] 이펙티브 타입스크립트 4~6강 듣기 (2시간) (아침 or 점심)
+- [ ] 스터디 과제 (CORS)(3시간) (아침 or 점심
+- [ ] time-picker 리팩토링 (2시간) (저녁)
+- [ ] 블로그 밀린 거 업로드
