--- a/코린/9월5일-9월11일.md
+++ b/코린/9월5일-9월11일.md
@@ -14,6 +14,6 @@
 - [x] 알고리즘 1개 풀기
 
 ## 9월8일
-- [ ] 미션 4단계 구현하기
-- [ ] 캐시 공부 및 정리
-- [ ] 알고리즘 1개 풀기
+- [x] 미션 4단계 구현하기
+- [x] 캐시 공부 및 정리
+- [x] 알고리즘 1개 풀기
