220909 앨버 계획 완료

--- a/앨버/9월5일~9월11일.md
+++ b/앨버/9월5일~9월11일.md
@@ -38,7 +38,7 @@
 ## 9월 9일
 
 - [x] 이펙티브 타입스크립트 4~11강 듣기 (12:00 ~ 15:30)
-- [ ] 스터디 과제 (CORS)(3시간) (운동하고 와서)
-- [ ] 운동 (16:00 ~ 17:30)
+- [x] 스터디 과제 (CORS)(3시간) (운동하고 와서)
+- [x] 운동 (16:00 ~ 17:30)
 - [ ] time-picker 리팩토링 (2시간) (저녁)
-- [ ] 블로그 밀린 거 업로드
+- [x] 블로그 밀린 거 업로드
