[앨버] 9월 9일 계획 (#912)
* 220909 앨버 계획

* 220909 앨버 계획 수정

* 220909 앨버 계획 완료

--- a/앨버/9월5일~9월11일.md
+++ b/앨버/9월5일~9월11일.md
@@ -33,3 +33,12 @@
 - [x] 이펙티브 타입스크립트 1강 듣기 (17:00 ~ 18:00)
 - [x] 알고리즘 문제 2개 풀기 (CORS 과제 진행은 내일 하기로~ 졸려서 안되겠음)
 - [x] 하루 공부 회고 및 공부 계획 세우기
+
+
+## 9월 9일
+
+- [x] 이펙티브 타입스크립트 4~11강 듣기 (12:00 ~ 15:30)
+- [x] 스터디 과제 (CORS)(3시간) (운동하고 와서)
+- [x] 운동 (16:00 ~ 17:30)
+- [ ] time-picker 리팩토링 (2시간) (저녁)
+- [x] 블로그 밀린 거 업로드
