--- a/앨버/9월5일~9월11일.md
+++ b/앨버/9월5일~9월11일.md
@@ -40,5 +40,15 @@
 - [x] 이펙티브 타입스크립트 4~11강 듣기 (12:00 ~ 15:30)
 - [x] 스터디 과제 (CORS)(3시간) (운동하고 와서)
 - [x] 운동 (16:00 ~ 17:30)
-- [ ] time-picker 리팩토링 (2시간) (저녁)
+
 - [x] 블로그 밀린 거 업로드
+
+
+## 9월 10일
+
+- [ ] 이펙티브 타입스크립트 11 ~ 13 (2시간)
+- [ ] 스터디 과제 (2시간)
+- [ ] 운동
+- [ ] time-picker 리팩토링 (2시간)
+- [ ] javascript 1시간 공부
+- [ ] react 1시간 공부 
