--- a/앨버/9월5일~9월11일.md
+++ b/앨버/9월5일~9월11일.md
@@ -55,8 +55,8 @@
 
 ## 9월 11일
 
-- [ ] 이펙티브 타입스크립트 11 ~ 15 (3시간)
-- [ ] time-picker 리팩토링 (2시간)
+- [x] 이펙티브 타입스크립트 11 ~ 15 (3시간)
+- [x] time-picker 리팩토링 (2시간)
 - [ ] calendar 리팩토링 (1시간)
-- [ ] javasccript (1시간)
+- [x] javasccript (1시간)
 - [ ] react 공부 (1시간)
