[앨버] 9월 11일 계획 (#913)
* 220911 앨버 계획

* 220911 앨버 계획 실행

--- a/앨버/9월5일~9월11일.md
+++ b/앨버/9월5일~9월11일.md
@@ -47,8 +47,16 @@
 ## 9월 10일
 
 - [ ] 이펙티브 타입스크립트 11 ~ 13 (2시간)
-- [ ] 스터디 과제 (2시간)
-- [ ] 운동
+- [x] 스터디 과제 (2시간)
+- [x] 운동
 - [ ] time-picker 리팩토링 (2시간)
 - [ ] javascript 1시간 공부
 - [ ] react 1시간 공부 
+
+## 9월 11일
+
+- [x] 이펙티브 타입스크립트 11 ~ 15 (3시간)
+- [x] time-picker 리팩토링 (2시간)
+- [ ] calendar 리팩토링 (1시간)
+- [x] javasccript (1시간)
+- [ ] react 공부 (1시간)
