220913 앨버 계획 완료

--- a/앨버/9월12일~9월18일.md
+++ b/앨버/9월12일~9월18일.md
@@ -1,5 +1,5 @@
 # 9월 12일
 
-- [ ] 이펙티브 타입스크립트 18 ~ 25강 (3시간)
-- [ ] calendar 리팩토링 (2시간)
-- [ ] 개인 공부
+- [x] 이펙티브 타입스크립트 18 ~ 25강 (3시간)
+- [x] calendar 리팩토링 (2시간)
+- [x] 개인 공부
