220914 앨버 계획 완료

--- a/앨버/9월12일~9월18일.md
+++ b/앨버/9월12일~9월18일.md
@@ -9,6 +9,6 @@
 
 - [ ] 미래 공부계획 세우기
 - [ ] prolog 문제 파악하기 (1시간)
-- [ ] 프로젝트 (3시간)
-- [ ] 이펙티브 타입스크립트 스터디 26강 ~ 30강 (1시간 30분)
-- [ ] javascript 읽기
+- [x] 프로젝트 (3시간)
+- [x] 이펙티브 타입스크립트 스터디 26강 ~ 27강
+- [x] javascript 읽기
