[앨버] 9월 14일 계획 (#920)
* 220914 앨버 계획

* 220914 앨버 계획 완료

--- a/앨버/9월12일~9월18일.md
+++ b/앨버/9월12일~9월18일.md
@@ -3,3 +3,12 @@
 - [x] 이펙티브 타입스크립트 18 ~ 25강 (3시간)
 - [x] calendar 리팩토링 (2시간)
 - [x] 개인 공부
+
+
+# 9월 14일
+
+- [ ] 미래 공부계획 세우기
+- [ ] prolog 문제 파악하기 (1시간)
+- [x] 프로젝트 (3시간)
+- [x] 이펙티브 타입스크립트 스터디 26강 ~ 27강
+- [x] javascript 읽기
