--- a/아서/9월13일~9월18일.md
+++ b/아서/9월13일~9월18일.md
@@ -11,14 +11,14 @@
 ## 9월 15일
 
 - 오전 일과(10:30~12:00)
-  - [ ] 자바의신 25장 Thread 학습하기
-  - [ ] 학습 시스템 계획하기
+  - [x] 자바의신 25장 Thread 학습하기
+  - [x] 학습 시스템 계획하기
 - 오후 일과(13:00~17:30)
+  - [x] 서블릿 & 서블릿 컨테이너 강의 보기
   - [ ] nGrinder Script 짜고 성능테스트
   - [ ] 톰캣 성능 개선 방향 고민하기
-  - [ ] Ready 상태 쿠폰 조회 API 만들기
-  - [ ] RestDocs 복습하기
-  - [ ] 서블릿 & 서블릿 컨테이너 강의 보기
+  - [x] Ready 상태 쿠폰 조회 API 만들기
+  - [x] RestDocs 복습하기
 
 - 저녁 일과 (19:00~22:00)
   - [ ] RestDocs 적용하기
