[아서] 9월 15일 계획 (#923)
* [아서] 9월 15일 계획

* [아서] 9월 15일 끝

--- a/아서/9월13일~9월18일.md
+++ b/아서/9월13일~9월18일.md
@@ -4,7 +4,21 @@
 
 
 ## 9월 14일
-- [ ] 토비의 스프링 2.2장 읽기
-- [ ] Http 학습
-- [ ] nGrinder 시도해보기
+- [x] 토비의 스프링 2.2장 읽기
+- [x] Http 학습
+- [x] nGrinder 시도해보기
 
+## 9월 15일
+
+- 오전 일과(10:30~12:00)
+  - [x] 자바의신 25장 Thread 학습하기
+  - [x] 학습 시스템 계획하기
+- 오후 일과(13:00~17:30)
+  - [x] 서블릿 & 서블릿 컨테이너 강의 보기
+  - [ ] nGrinder Script 짜고 성능테스트
+  - [ ] 톰캣 성능 개선 방향 고민하기
+  - [x] Ready 상태 쿠폰 조회 API 만들기
+  - [x] RestDocs 복습하기
+
+- 저녁 일과 (19:00~22:00)
+  - [ ] RestDocs 적용하기
