[파랑] 9월15일 계획완료

--- a/파랑/9월12일~9월18일.md
+++ b/파랑/9월12일~9월18일.md
@@ -5,7 +5,7 @@
 - [x] 근로 자동채점 페어
 
 ### 9월 15일 (목)
-- [ ] 달록 코드 리팩토링
-- [ ] 달록 백엔드 회의
-- [ ] 근로 자동채점 페어
-- [ ] 서블릿 강의 예습
+- [x] 달록 코드 리팩토링
+- [x] 달록 백엔드 회의
+- [x] 근로 자동채점 페어
+- [x] 서블릿 강의 예습
