[파랑] 9월15일 계획 (#922)
* [파랑] 9월15일 계획

* [파랑] 9월15일 계획완료

--- a/파랑/9월12일~9월18일.md
+++ b/파랑/9월12일~9월18일.md
@@ -3,3 +3,9 @@
 - [x] 14시 달록 스프린트 회의
 - [x] 16시 근로 자동채점 회의
 - [x] 근로 자동채점 페어
+
+### 9월 15일 (목)
+- [x] 달록 코드 리팩토링
+- [x] 달록 백엔드 회의
+- [x] 근로 자동채점 페어
+- [x] 서블릿 강의 예습
