[앨버] 9월 15일 계획 (#921)
* 220915 앨버 계획

* 220915 앨버 계획 완료

--- a/앨버/9월12일~9월18일.md
+++ b/앨버/9월12일~9월18일.md
@@ -12,3 +12,14 @@
 - [x] 프로젝트 (3시간)
 - [x] 이펙티브 타입스크립트 스터디 26강 ~ 27강
 - [x] javascript 읽기
+- [x] 알고리즘 1문제
+
+# 9월 15일
+
+- [x] 미래 공부계획 세우기 (6시 이후)
+- [x] prolog 문제 파악한 후 브라운에게 DM (1시간, 10시전)
+- [x] 프로젝트 (3시간, 1시 ~ 4시) - 1366 대응 및 분업
+- [x] 모던 딥 다이브 1장 읽기 (1시간, 10시30 ~ 11시30)
+- [x] 이펙티브 타입스크립트 스터디 28강
+
+
