[에덴] 9월 15일 계획 (#924)
* 9월 15일 에덴 계획

* 9월 15일 에덴 계획 완료

--- a/에덴/9월13일-9월18일.md
+++ b/에덴/9월13일-9월18일.md
@@ -6,9 +6,15 @@
 - [x] cs 겅부
 - [x] 미션 PR
 
-## 9월 13일
+## 9월 14일
 
 - [x] 데일리 회의
 - [x] 수업 복습
 - [x] 프로젝트 수행
 - [x] 했던 공부 정리
+
+## 9월 15일
+
+- [x] 데일리 회의
+- [x] 하던 미션 계속 하기 
+- [x] MySQL 겅부
