--- a/아서/9월13일~9월18일.md
+++ b/아서/9월13일~9월18일.md
@@ -19,6 +19,18 @@
   - [ ] 톰캣 성능 개선 방향 고민하기
   - [x] Ready 상태 쿠폰 조회 API 만들기
   - [x] RestDocs 복습하기
-
 - 저녁 일과 (19:00~22:00)
-  - [ ] RestDocs 적용하기
+  - [x] RestDocs 적용하기
+
+
+
+## 9월 16일
+
+- 오전 일과 (10:30~12:00)
+  - [ ] 서블릿과 리플렉션 수업 듣기
+- 오후 일과(13:00~17:30)
+  - [ ] nGrinder Script 짜고 성능 테스트
+  - [ ] 톰캣 성능 개선 방향 고민하기
+  - [ ] @MVC 미션 맛보기
+- 저녁 일과
+  - [ ] 데플 회식
