--- a/앨버/9월12일~9월18일.md
+++ b/앨버/9월12일~9월18일.md
@@ -23,3 +23,10 @@
 - [x] 이펙티브 타입스크립트 스터디 28강
 
 
+# 9월 16일
+
+- [x] 모던 딥 다이브 1장 읽기 (1시간) (안졸릴때)
+- [x] 프로젝트 (3시간) - 성능 최적화 (졸릴때)
+- [ ] 반상회 과제 (1시간) (조금 졸릴때)
+- [x] 키워드 정리 (1시간) 
+- [x] 프로젝트 정리 (30분)
