--- a/앨버/9월12일~9월18일.md
+++ b/앨버/9월12일~9월18일.md
@@ -33,8 +33,8 @@
 
 # 9월 17일
 
-- [ ] 모던 딥 다이브 1장 읽기 (1시간) (안졸릴때)
-- [ ] 키워드 정리 (30분) 
+- [x] 모던 딥 다이브 1장 읽기 (1시간) (안졸릴때)
+- [x] 키워드 정리 (30분) 
 - [ ] 프로젝트 정리 (30분)
-- [ ] 반상회 과제
-- [ ] 프로젝트 (1시간30분)
+- [x] 반상회 과제
+- [x] 프로젝트 (1시간30분)
