--- a/파랑/9월12일~9월18일.md
+++ b/파랑/9월12일~9월18일.md
@@ -11,7 +11,7 @@
 - [x] 서블릿 강의 예습
 
 ### 9월 16일 (금)
-- [ ] 서블릿 강의
-- [ ] 달록 코드 리팩토링
-- [ ] 근로 자동채점 페어
-- [ ] 데플 회식
+- [x] 서블릿 강의
+- [x] 달록 코드 리팩토링
+- [x] 근로 자동채점 페어
+- [x] 데플 회식
