220918 앨버 계획 완료

--- a/앨버/9월12일~9월18일.md
+++ b/앨버/9월12일~9월18일.md
@@ -42,10 +42,10 @@
 
 # 9월 18일
 
-- [ ] 반상회 과제 마무리 + 블로그 포스팅 (1시간)
-- [ ] alpop 개발 (~14:00)
-- [ ] 프로젝트 (1시간 30분 - 성능 최적화) - 화요일까지 끝내야함
-- [ ] 프롤로그 작업 후 PR (1시간)
-- [ ] 모던 딥 다이브 읽기 (1시간)
-- [ ] 키워드 정리 (30분)
-- [ ] 프로젝트 정리 (30분)
+- [x] 반상회 과제 마무리 + 블로그 포스팅 (1시간)
+- [x] alpop 개발 (~14:00)
+- [x] 프로젝트 (1시간 30분 - 성능 최적화) - 화요일까지 끝내야함
+- [x] 프롤로그 작업 후 PR (1시간)
+- [x] 모던 딥 다이브 읽기 (1시간)
+- [x] 키워드 정리 (30분)
+- [x] 프로젝트 정리 (30분)
