--- a/파랑/9월19일~9월25일.md
+++ b/파랑/9월19일~9월25일.md
@@ -1,18 +1,24 @@
 ### 9월 19일 (월)
-- [ ] 10시 필라테스
-- [ ] 달록 종일 일정 endTime 00시00분으로 변경
-- [ ] 근로 자동채점 페어
-- [ ] 미션 1단계 PR 제출
+- [x] 10시 필라테스
+- [x] 달록 종일 일정 endTime 00시00분으로 변경
+- [x] 근로 자동채점 페어
+- [x] 미션 1단계 PR 제출
 
 ### 9월 20일 (화)
+- [ ] 백엔드 강의
+- [ ] 달록 부하 테스트
 - [ ] 15시 근로 회의
+- [ ] 근로 자동채점 페어
+- [ ] 미션 2단계 시작
 
 ### 9월 21일 (수)
 - [ ] 달록 스프린트 회의
+- [ ] 20시 필라테스
+- [ ] 공부한 것들 정리 (제발..)
 
 ### 9월 22일 (목)
 - [ ] 15시 근로 회의
 
 ### 9월 23일 (금)
 - [ ] 5차 데모데이
-- [ ] 달록 회식
+- [ ] 달록 회식 with 내편
