--- a/아서/9월13일~9월18일.md
+++ b/아서/9월13일~9월18일.md
@@ -27,10 +27,10 @@
 ## 9월 16일
 
 - 오전 일과 (10:30~12:00)
-  - [ ] 서블릿과 리플렉션 수업 듣기
+  - [x] 서블릿과 리플렉션 수업 듣기
 - 오후 일과(13:00~17:30)
-  - [ ] nGrinder Script 짜고 성능 테스트
-  - [ ] 톰캣 성능 개선 방향 고민하기
-  - [ ] @MVC 미션 맛보기
+  - [x] nGrinder Script 짜고 성능 테스트
+  - [x] 톰캣 성능 개선 방향 고민하기
+  - [x] @MVC 미션 맛보기
 - 저녁 일과
-  - [ ] 데플 회식
+  - [x] 데플 회식
