220920 앨버 계획 완료

--- a/앨버/9월19일~9월25일.md
+++ b/앨버/9월19일~9월25일.md
@@ -10,16 +10,16 @@
 
 # 9월 20일
 - [x] 자바스크립트 공부 (1시간)
-- [ ] 프로젝트 정리 (30분)
-- [ ] 키워드 정리 (30분)
-- [ ] 수업 (오전)
-- [ ] 프로젝트 협업 (1시 ~ 3시)
-- [ ] 프로젝트 - 성능 최적화 (3시 ~ 6시)
+- [x] 프로젝트 정리 (30분)
+- [x] 키워드 정리 (30분)
+- [x] 수업 (오전)
+- [x] 프로젝트 협업 (1시 ~ 3시)
+- [x] 프로젝트 - 성능 최적화 (3시 ~ 6시)
 캐시 정책 정하기 (with 위니)
 - 캐시 적용 (ngnix) + webpack js contentHash 적용
 - layout shift 해결
 
-- [ ] 유동적인 계획 (저녁)
+- [x] 유동적인 계획 (저녁)
 
 
 # 주요 일정 정리
