--- a/앨버/9월19일~9월25일.md
+++ b/앨버/9월19일~9월25일.md
@@ -21,6 +21,14 @@
 
 - [x] 유동적인 계획 (저녁)
 
+# 9월 21일
+
+- [ ] 자바스크립트 공부 (1시간)
+- [ ] 프로젝트 정리 (30분)
+- [ ] 키워드 정리 (30분)
+- [ ] 프로젝트 (5시간)
+- [ ] 미션 (6시 이후)
+
 
 # 주요 일정 정리
 
