220922 앨버 계획 완료

--- a/앨버/9월19일~9월25일.md
+++ b/앨버/9월19일~9월25일.md
@@ -23,11 +23,10 @@
 
 # 9월 21일
 
-- [ ] 자바스크립트 공부 (1시간)
-- [ ] 프로젝트 정리 (30분)
-- [ ] 키워드 정리 (30분)
-- [ ] 프로젝트 (5시간)
-- [ ] 미션 (6시 이후)
+- [x] 자바스크립트 공부 (1시간)
+- [x] 프로젝트 정리 (30분)
+- [x] 키워드 정리 (30분)
+- [x] 프로젝트 (7시간)
 
 
 # 주요 일정 정리
