--- a/앨버/9월19일~9월25일.md
+++ b/앨버/9월19일~9월25일.md
@@ -21,6 +21,13 @@
 
 - [x] 유동적인 계획 (저녁)
 
+# 9월 21일
+
+- [x] 자바스크립트 공부 (1시간)
+- [x] 프로젝트 정리 (30분)
+- [x] 키워드 정리 (30분)
+- [x] 프로젝트 (7시간)
+
 
 # 주요 일정 정리
 
