--- a/앨버/9월19일~9월25일.md
+++ b/앨버/9월19일~9월25일.md
@@ -29,7 +29,14 @@
 - [x] 프로젝트 (7시간)
 
 
-# 주요 일정 정리
+# 9월 22일
 
-20일까지 성능 최적화 마무리
+- [ ] 자바스크립트 공부 (1시간, 18시 이후)
+- [ ] 미션 (18시 이후)
+- [ ] 프로젝트 정리 (30분, 18시 이후)
+- [ ] 키워드 정리 (30분, 18시 이후)
+- [ ] 프로젝트 (10:00 ~ 18:00)
+
+
+# 주요 일정 정리
 25~25일에 이력서 작성
