--- a/앨버/9월19일~9월25일.md
+++ b/앨버/9월19일~9월25일.md
@@ -37,6 +37,16 @@
 - [ ] 키워드 정리 (30분, 18시 이후)
 - [ ] 프로젝트 (10:00 ~ 18:00)
 
+# 9월 23일
+
+- [ ] 프로젝트 (~ 14:00)
+- [ ] 프로젝트 정리 (30분)
+- [ ] 키워드 정리 (30분)
+- [ ] 회고 (16:30 ~ 18:00)
+- [ ] 
+- [ ] 미션 (18:00 ~)
+
 
 # 주요 일정 정리
 25~25일에 이력서 작성
+주말에는 타입스크립트 미션 + 기본 할 것들(2시간)
