--- a/앨버/9월19일~9월25일.md
+++ b/앨버/9월19일~9월25일.md
@@ -31,20 +31,24 @@
 
 # 9월 22일
 
-- [ ] 자바스크립트 공부 (1시간, 18시 이후)
-- [ ] 미션 (18시 이후)
-- [ ] 프로젝트 정리 (30분, 18시 이후)
-- [ ] 키워드 정리 (30분, 18시 이후)
-- [ ] 프로젝트 (10:00 ~ 18:00)
+- [x] 자바스크립트 공부 (1시간, 18시 이후)
+- [x] 프로젝트 정리 (30분, 18시 이후)
+- [x] 키워드 정리 (30분, 18시 이후)
+- [x] 프로젝트 (10:00 ~ 18:00)
 
 # 9월 23일
 
-- [ ] 프로젝트 (~ 14:00)
-- [ ] 프로젝트 정리 (30분)
-- [ ] 키워드 정리 (30분)
-- [ ] 회고 (16:30 ~ 18:00)
-- [ ] 
-- [ ] 미션 (18:00 ~)
+- [x] 프로젝트 (~ 14:00)
+- [x] 프로젝트 정리 (30분)
+- [x] 키워드 정리 (30분)
+- [x] 회고 (16:30 ~ 18:00)
+
+# 9월 24일
+- [ ] 자바스크립트 공부 (1시간)
+- [ ] 프로젝트 정리 (20분)
+- [ ] 키워드 정리 (20분)
+- [ ] 미션
+- [ ] 반상회 과제 (2시간)
 
 
 # 주요 일정 정리
