[파랑] 9월24&25일 계획

--- a/파랑/9월19일~9월25일.md
+++ b/파랑/9월19일~9월25일.md
@@ -24,3 +24,13 @@
 ### 9월 23일 (금)
 - [x] 5차 데모데이
 - [x] 달록 회식 with 내편
+
+### 9월 24일 (토)
+- [ ] 미션 2단계 PR 제출
+- [ ] 미션 2단계 케이 PR 리뷰
+- [ ] 미션 3단계 살펴보기
+- [ ] 공부한 내용 정리
+
+### 9월 25일 (일)
+- [ ] 근로 자동채점 페어
+- [ ] 미션 3단계
