[파랑] 9월26-30일 계획수정

--- a/파랑/9월26일~10월2일.md
+++ b/파랑/9월26일~10월2일.md
@@ -6,12 +6,10 @@
 - [ ] 미션 3단계
 
 ### 9월 27일 (화)
-- 미션 끝
-  - [ ] 잠실 출근
-  - [ ] 근로 자동채점 페어
-- 미션 끝X
-  - [ ] 선릉 출근
-  - [ ] 미션 3단계 PR 제출
+- [ ] 선릉 출근
+- [ ] 백엔드 강의
+- [ ] DI 컨테이너 구현하기 실습
+- [ ] 미션 3단계 PR 제출
 - [ ] 케이 미션 PR 리뷰
 
 ### 9월 28일 (수)
