[파랑] 9월26일 계획완료 및 27일 계획 수정

--- a/파랑/9월26일~10월2일.md
+++ b/파랑/9월26일~10월2일.md
@@ -1,16 +1,18 @@
 ### 9월 26일 (월)
-- [ ] 10시 필라테스
-- [ ] 잠실 출근
-- [ ] 16시 근로 회의
-- [ ] 근로 자동채점 회의
-- [ ] 미션 3단계
+- [x] 10시 필라테스
+- [x] 잠실 출근
+- [x] 16시 근로 회의
+- [x] 근로 자동채점 회의
+- [x] 미션 3단계 PR
 
 ### 9월 27일 (화)
-- [ ] 선릉 출근
-- [ ] 백엔드 강의
-- [ ] DI 컨테이너 구현하기 실습
-- [ ] 미션 3단계 PR 제출
+- [x] 잠실 출근
+- [x] 백엔드 강의
 - [ ] 케이 미션 PR 리뷰
+- [ ] DI 컨테이너 구현하기 실습
+- [ ] 개인 공부
+- [ ] 16시 근로 자동채점 용어회의
+- [ ] 근로 자동채점 페어
 
 ### 9월 28일 (수)
 - [ ] 선릉 출근
