[파랑] 9월27일 계획완료 & 28일 계획수정

--- a/파랑/9월26일~10월2일.md
+++ b/파랑/9월26일~10월2일.md
@@ -8,17 +8,18 @@
 ### 9월 27일 (화)
 - [x] 잠실 출근
 - [x] 백엔드 강의
-- [ ] 케이 미션 PR 리뷰
-- [ ] DI 컨테이너 구현하기 실습
-- [ ] 개인 공부
-- [ ] 16시 근로 자동채점 용어회의
-- [ ] 근로 자동채점 페어
+- [x] 케이 미션 PR 리뷰
+- [x] DI 컨테이너 구현하기 실습
+- [x] 개인 공부
+- [x] 16시 근로 자동채점 용어회의
+- [x] 근로 자동채점 페어
 
 ### 9월 28일 (수)
 - [ ] 선릉 출근
+- [ ] 근로 자동채점 페어
+- [ ] 12시 30분 달록 트러블 슈팅 정리
 - [ ] 14시 달록 스프린트 회의
 - [ ] 달록 태스크
-- [ ] 근로 자동채점 페어
 - [ ] 미션 리뷰 반영
 
 ### 9월 29일 (목)
