[파랑] 9월27일 일기추가

--- a/파랑/9월26일~10월2일.md
+++ b/파랑/9월26일~10월2일.md
@@ -13,6 +13,10 @@
 - [x] 개인 공부
 - [x] 16시 근로 자동채점 용어회의
 - [x] 근로 자동채점 페어
+---
+내가 한 때는 여기다가 짧은 일기를 썼었다는 사실이 갑자기 생각났다;; 얼마 안 된 일인데 왜 이렇게 먼 옛날처럼 느껴지는지.. 레벨 3부터는 너무 바쁘다보니까 일기를 써야겠다는 생각조차 못했다. 근데 오늘 갑자기 번뜩 떠올라서 몇 자 끄적여본다.
+요새 팀원들 두고 혼자 잠실로 출근하는데 너무 쓸쓸하고 외롭다. 나는 팀원들 봐야 에너지도 채우고 스트레스도 풀리는데 그게 안 되니까 힘이 안 난다. 달록 보고싶다.
+점심엔 도시락 먹어야 하는데 거실에서 혼자 먹으면 사람들이 지나다니면서 파랑 왜 잠실왔냐, 왜 혼자 밥 먹냐 물어볼까봐 트랙룸에서 밥 먹었다ㅋㅋㅋㅋㅋ. 인사하는 것도 버거워서 사무실에만 박혀있었다. 내일은 선릉 가서 행복하다ㅠ.
 
 ### 9월 28일 (수)
 - [ ] 선릉 출근
@@ -21,6 +25,7 @@
 - [ ] 14시 달록 스프린트 회의
 - [ ] 달록 태스크
 - [ ] 미션 리뷰 반영
+- [ ] 20시 필라테스
 
 ### 9월 29일 (목)
 - [ ] 잠실 출근
