[아서] 9월 29일 계획

--- a/아서/9월26일~10월2일.md
+++ b/아서/9월26일~10월2일.md
@@ -1,5 +1,13 @@
 ## 9월 26일
 
-- [ ] 미션 PR 제출
-- [ ] Thread 학습
-- [ ] 스프린트 회의
+- [x] 미션 PR 제출
+- [x] Thread 학습
+- [x] 스프린트 회의
+
+
+
+## 9월 29일
+
+- [ ] 3단계 PR 제출
+- [ ] 점심먹고 알고리즘 하나 풀기
+- [ ] GoogleOauth PR 올리기
