--- a/파랑/9월26일~10월2일.md
+++ b/파랑/9월26일~10월2일.md
@@ -19,20 +19,32 @@
 점심엔 도시락 먹어야 하는데 거실에서 혼자 먹으면 사람들이 지나다니면서 파랑 왜 잠실왔냐, 왜 혼자 밥 먹냐 물어볼까봐 트랙룸에서 밥 먹었다ㅋㅋㅋㅋㅋ. 인사하는 것도 버거워서 사무실에만 박혀있었다. 내일은 선릉 가서 행복하다ㅠ.
 
 ### 9월 28일 (수)
-- [ ] 선릉 출근
-- [ ] 근로 자동채점 페어
-- [ ] 12시 30분 달록 트러블 슈팅 정리
-- [ ] 14시 달록 스프린트 회의
-- [ ] 달록 태스크
-- [ ] 미션 리뷰 반영
-- [ ] 20시 필라테스
+- [x] 선릉 출근
+- [x] 근로 자동채점 페어
+- [x] 12시 30분 달록 트러블 슈팅 정리
+- [x] 14시 달록 스프린트 회의
+- [x] 달록 태스크
+- [x] 미션 리뷰 반영
+- [x] ~~20시 필라테스~~ 매트 생일 기념 달록 회식
 
 ### 9월 29일 (목)
-- [ ] 잠실 출근
-- [ ] 16시 근로 회의
-- [ ] 근로 자동채점 페어
-- [ ] MVC 미션 마무리
+- [x] 잠실 출근
+- [x] 근로 자동채점 페어
+- [x] 달록 태스크
+- [x] 16시 근로 회의
+- [x] MVC 미션 마무리
+- [x] 21시 필라테스
+---
+오늘은 매트 생일 & 달록 첫 만남 100일인 행복한 날🥳 잠실에 혼자 있을 때는 쓸쓸했는데 달록이들이랑 같이 있으니까 텐션 최고였다. 데일리 기분 10/10 이었음. 너무 좋은 날이잖아~
 
 ### 9월 30일 (금)
+- [ ] 근로 자동채점 리뷰 반영
 - [ ] 백엔드 강의
 - [ ] DB Connection Pool 실습
+- [ ] 제이슨&차리와 함께하는 몹 프로그래밍
+- [ ] 저녁 약속
+
+### 10월 1일 (토)
+- [ ] 11시 필라테스
+- [ ] 2시 잠실 등교
+- [ ] 근로 자동채점 페어
