220929 ~ 220930 앨버 계획 부분 완료

--- a/앨버/9월28일~10월2일.md
+++ b/앨버/9월28일~10월2일.md
@@ -11,9 +11,9 @@
 # 9월 29일
 
 - [ ] 프로젝트 (3시간)
-- [ ] 미션 리뷰 반영 후 merge
-- [ ] 타입스크립트 미션 정리 (2시간) - 흡수하기
+- [x] 미션 리뷰 반영 후 merge
+- [x] 타입스크립트 미션 정리 (2시간) - 흡수하기
 - [ ] 블로그 업로드
-- [ ] 자바스크립트 (1시간)
-- [ ] 프로젝트 정리 (30분)
-- [ ] 키워드 정리 (30분)
+- [x] 자바스크립트 (1시간)
+- [x] 프로젝트 정리 (30분)
+- [x] 키워드 정리 (30분)
