--- a/앨버/9월28일~10월2일.md
+++ b/앨버/9월28일~10월2일.md
@@ -13,7 +13,15 @@
 - [ ] 프로젝트 (3시간)
 - [x] 미션 리뷰 반영 후 merge
 - [x] 타입스크립트 미션 정리 (2시간) - 흡수하기
-- [ ] 블로그 업로드
 - [x] 자바스크립트 (1시간)
 - [x] 프로젝트 정리 (30분)
 - [x] 키워드 정리 (30분)
+
+# 9월 30일
+
+- [ ] 프로젝트 (3시간) - 테스트
+- [ ] typescript interface vs type 공부 (1시간)
+- [ ] 블로그 업로드 + http 내용 보충 (1시간)
+- [ ] 자바스크립트 공부 (1시간)
+- [ ] 프로젝트 정리 (30분)
+- [ ] 키워드 정리 (30분)
