주말 계획 세우기

--- a/앨버/9월28일~10월2일.md
+++ b/앨버/9월28일~10월2일.md
@@ -25,3 +25,10 @@
 - [ ] 자바스크립트 공부 (1시간)
 - [ ] 프로젝트 정리 (30분)
 - [ ] 키워드 정리 (30분)
+- [ ] 회고 (산책)
+
+
+
+## 주말에 할 일
+- [ ] typescript 관련해서 정리해서 머릿속에 넣어야함 (다음주부터는 웹 접근성 해야되기 때문)
+- [ ] 프로젝트 테스트 코드 작성 다 끝내야함 + 왜 testing-library, cypress를 사용했는지 잘 정리하기 (8시간)
