220930 앨버 계획 완료

--- a/앨버/9월28일~10월2일.md
+++ b/앨버/9월28일~10월2일.md
@@ -19,13 +19,13 @@
 
 # 9월 30일
 
-- [ ] 프로젝트 (3시간) - 테스트
+- [x] 프로젝트 (3시간) - 테스트
 - [ ] typescript interface vs type 공부 (1시간)
-- [ ] 블로그 업로드 + http 내용 보충 (1시간)
-- [ ] 자바스크립트 공부 (1시간)
-- [ ] 프로젝트 정리 (30분)
-- [ ] 키워드 정리 (30분)
-- [ ] 회고 (산책)
+- [x] 블로그 업로드 + http 내용 보충 (1시간)
+- [x] 자바스크립트 공부 (20분)
+- [x] 프로젝트 정리 (30분)
+- [x] 키워드 정리 (30분)
+- [x] 회고 (산책)
 
 
 
