--- a/앨버/9월28일~10월2일.md
+++ b/앨버/9월28일~10월2일.md
@@ -19,9 +19,16 @@
 
 # 9월 30일
 
-- [ ] 프로젝트 (3시간) - 테스트
+- [x] 프로젝트 (3시간) - 테스트
 - [ ] typescript interface vs type 공부 (1시간)
-- [ ] 블로그 업로드 + http 내용 보충 (1시간)
-- [ ] 자바스크립트 공부 (1시간)
-- [ ] 프로젝트 정리 (30분)
-- [ ] 키워드 정리 (30분)
+- [x] 블로그 업로드 + http 내용 보충 (1시간)
+- [x] 자바스크립트 공부 (20분)
+- [x] 프로젝트 정리 (30분)
+- [x] 키워드 정리 (30분)
+- [x] 회고 (산책)
+
+
+
+## 주말에 할 일
+- [ ] typescript 관련해서 정리해서 머릿속에 넣어야함 (다음주부터는 웹 접근성 해야되기 때문)
+- [ ] 프로젝트 테스트 코드 작성 다 끝내야함 + 왜 testing-library, cypress를 사용했는지 잘 정리하기 (8시간)
