--- a/앨버/9월28일~10월2일.md
+++ b/앨버/9월28일~10월2일.md
@@ -28,14 +28,23 @@
 
 # 10월 1일
 
-- [ ] 프로젝트 (4시간) - 테스트
-- [ ] prolog (2시간)
+- [x] 프로젝트 (4시간) - 테스트
+- [x] prolog (2시간)
+- [x] typescript interface vs type 공부 - 우아한 반상회(2시간)
+- [ ] 자바스크립트 공부 (1시간)
+- [x] 프로젝트 정리 (30분)
+- [x] 키워드 정리 (30분)
+
+
+# 10월 2일
+
+- [ ] 프로젝트 (3시간) - 테스트
+- [ ] prolog (1시간)
 - [ ] typescript interface vs type 공부 - 우아한 반상회(2시간)
 - [ ] 자바스크립트 공부 (1시간)
-- [ ] 프로젝트 정리 (30분)
+- [x] 프로젝트 정리 (30분)
 - [ ] 키워드 정리 (30분)
-
-
+ 
 
 ## 주말에 할 일
 - [ ] typescript 관련해서 정리해서 머릿속에 넣어야함 (다음주부터는 웹 접근성 해야되기 때문)
