--- a/앨버/10월3일~10월9일.md
+++ b/앨버/10월3일~10월9일.md
@@ -1,8 +1,18 @@
 # 10월 3일
 
-- [ ] 프로젝트 (3시간 + 1시간) (테스트 완료하기)
+- [x] 프로젝트 (3시간 + 1시간) (테스트 완료하기)
 - [ ] prolog (1시간)
+- [x] 공부 (1시간)
+- [x] 프로젝트 정리 (30분)
+- [x] 키워드 정리 (30분)
+- [x] 회고 (동네 한 바퀴)
+
+# 10월 4일
+
+- [ ] prolog (1시간) (08:40 ~ 09:40)
 - [ ] 공부 (1시간)
 - [ ] 프로젝트 정리 (30분)
 - [ ] 키워드 정리 (30분)
-- [ ] 회고 (석촌호수 한 바퀴)
+- [ ] 짧은 회고 (10분)
+- [ ] 미션 (2시간) (20:00 ~ 22:00)
+- [ ] 프로젝트 협업 (3시간) (16:00 ~ 19:00)
