--- a/파랑/9월26일~10월2일.md
+++ b/파랑/9월26일~10월2일.md
@@ -38,13 +38,12 @@
 오늘은 매트 생일 & 달록 첫 만남 100일인 행복한 날🥳 잠실에 혼자 있을 때는 쓸쓸했는데 달록이들이랑 같이 있으니까 텐션 최고였다. 데일리 기분 10/10 이었음. 너무 좋은 날이잖아~
 
 ### 9월 30일 (금)
-- [ ] 근로 자동채점 리뷰 반영
-- [ ] 백엔드 강의
-- [ ] DB Connection Pool 실습
-- [ ] 제이슨&차리와 함께하는 몹 프로그래밍
-- [ ] 저녁 약속
+- [x] 근로 자동채점 ~~리뷰 반영~~ 갈아엎기..
+- [x] 백엔드 강의
+- [x] DB Connection Pool 실습
+- [x] 제이슨&차리와 함께하는 몹 프로그래밍
+- [x] 저녁 약속
 
 ### 10월 1일 (토)
-- [ ] 11시 필라테스
-- [ ] 2시 잠실 등교
-- [ ] 근로 자동채점 페어
+- [x] 11시 필라테스
+- [x] 왕십리 2시 근로 자동채점 페어 (PR 갈아엎기...)
