--- a/파랑/10월3일~10월9일.md
+++ b/파랑/10월3일~10월9일.md
@@ -7,6 +7,11 @@
 - [ ] 미션 오리 PR 리뷰
 
 ### 10월 5일 (수)
+- [ ] 미션 오리 PR 진짜 리뷰
+- [ ] 미션 리뷰 반영
+- [ ] 달록 timestamp -> datetime 마이그레이션 전략
+- [ ] 16시 달록 스프린트 회의
+- [ ] 근로 자동채점
 
 ### 10월 6일 (목)
 
