221004 앨버 계획 완료

--- a/앨버/10월3일~10월9일.md
+++ b/앨버/10월3일~10월9일.md
@@ -9,10 +9,10 @@
 
 # 10월 4일
 
-- [ ] prolog (1시간) (08:40 ~ 09:40)
+- [x] prolog (1시간) (08:40 ~ 09:40)
 - [ ] 공부 (1시간)
-- [ ] 프로젝트 정리 (30분)
-- [ ] 키워드 정리 (30분)
-- [ ] 짧은 회고 (10분)
-- [ ] 미션 (2시간) (20:00 ~ 22:00)
-- [ ] 프로젝트 협업 (3시간) (16:00 ~ 19:00)
+- [x] 프로젝트 정리 (30분)
+- [x] 키워드 정리 (30분)
+- [x] 짧은 회고 (10분)
+- [x] 미션 (1시간) (20:00 ~ 21:00)
+- [x] 프로젝트 협업 (3시간) (13:30 ~ 18:00)
