--- a/앨버/10월3일~10월9일.md
+++ b/앨버/10월3일~10월9일.md
@@ -16,3 +16,14 @@
 - [x] 짧은 회고 (10분)
 - [x] 미션 (1시간) (20:00 ~ 21:00)
 - [x] 프로젝트 협업 (3시간) (13:30 ~ 18:00)
+
+
+# 10월 5일
+
+- [ ] prolog (08:30 ~ 09:40)
+- [ ] 프로젝트 기획 및 README (13:00 ~16:00)
+- [ ] 미션 완료 (10:30 ~ 11:30 + 점심시간)
+- [ ] 프로젝트 정리 (30분)
+- [ ] 키워드 정리 (30분)
+- [ ] 짧은 회고 (10분)
+- [ ] 회식 (18:00 ~)
