[파랑] 10월 5일 계획완료

--- a/파랑/10월3일~10월9일.md
+++ b/파랑/10월3일~10월9일.md
@@ -7,11 +7,14 @@
 - [ ] 미션 오리 PR 리뷰
 
 ### 10월 5일 (수)
-- [ ] 미션 오리 PR 진짜 리뷰
-- [ ] 미션 리뷰 반영
-- [ ] 달록 timestamp -> datetime 마이그레이션 전략
-- [ ] 16시 달록 스프린트 회의
-- [ ] 근로 자동채점
+- [x] 미션 오리 PR 진짜 리뷰
+- [x] 미션 리뷰 반영
+- [x] 달록 timestamp -> datetime 마이그레이션 전략
+- [x] 16시 달록 스프린트 회의
+- [x] 근로 자동채점
+- [x] 20시 필라테스
+---
+얼마만에 선릉에만 있는 날이었는지... 팀원들이랑 저녁으로 내 최애 우리할매떡볶이도 먹고 운동도 가고 좋았다.
 
 ### 10월 6일 (목)
 
