[파랑] 10월 6일 계획

--- a/파랑/10월3일~10월9일.md
+++ b/파랑/10월3일~10월9일.md
@@ -17,5 +17,8 @@
 얼마만에 선릉에만 있는 날이었는지... 팀원들이랑 저녁으로 내 최애 우리할매떡볶이도 먹고 운동도 가고 좋았다.
 
 ### 10월 6일 (목)
+- [ ] 미션 2단계 시작
+- [ ] 근로 자동채점 2번째 이슈 페어
+- [ ] 달록 timestamp -> datetime dev db 마이그레이션
 
 ### 10월 7일 (금)
