[아서] 10월 6일 계획

--- a/아서/10월4일~10월10일.md
+++ b/아서/10월4일~10월10일.md
@@ -1,6 +1,25 @@
 ## 10월 4일
 
-- [ ] 오전 토미의 인프라 수업 듣기
+- [x] 오전 토미의 인프라 수업 듣기
+- [x] 미션 피드백 반영하기
+- [x] 미션 리뷰 해주기
+- [x] 통합회원 가입 기능 구현하기
+
+
+
+## 10월 6일
+
+오전
+
+- [ ] 알고리즘 한 문제 풀기
 - [ ] 미션 피드백 반영하기
-- [ ] 미션 리뷰 해주기
-- [ ] 통합회원 가입 기능 구현하기
+
+오후
+
+- [ ] 통합 회원 테이블 설계
+- [ ] 모니터링 시도해보기
+- [ ] SpringBatch Cron 학습하기
+
+저녁
+
+​	약속
