[파랑] 10월 6일 계획 (#949)
* [파랑] 10월 6일 계획

* [파랑] 10월 6일 계획완료

--- a/파랑/10월3일~10월9일.md
+++ b/파랑/10월3일~10월9일.md
@@ -17,5 +17,14 @@
 얼마만에 선릉에만 있는 날이었는지... 팀원들이랑 저녁으로 내 최애 우리할매떡볶이도 먹고 운동도 가고 좋았다.
 
 ### 10월 6일 (목)
+- [x] 미션 2단계 시작
+- [x] 근로 자동채점 2번째 이슈 페어
+- [x] 달록 timestamp -> datetime dev db 마이그레이션
+---
+오늘 참 여러모로 레전드였다. 저녁에 차리랑 페어하다가 웃느라 고개를 숙였는데 책상에 있던 차리 텀블러에 이마 박아서 멍들었다....
+그러고 장난친다고 내가 차리 커플링을 빈츠 과자 봉지에 넣어두고 "이거 이대로 버리면 레전드"라고 했는데 차리가 까먹고 진짜 버렸다.
+그걸 11시 잠실 마감하고 나와서 깨달아서 에덴이랑 셋이 다시 올라가서 쓰레기통 뒤져서 겨우 찾아냈다ㅋㅋ..
+찾고 다시 1층 내려왔는데 다시 마감 안 찍은 게 생각나서 한 번 더 올라갔다 온 건 비밀🤫.
+할 게 많아서 힘들었는데 어이 없어서 웃겼다. 얼마나 좋은 일이 생기려고 이러는지🧐. 
 
 ### 10월 7일 (금)
