[아서] 10월 7일 계획

--- a/아서/10월4일~10월10일.md
+++ b/아서/10월4일~10월10일.md
@@ -11,15 +11,26 @@
 
 오전
 
-- [ ] 알고리즘 한 문제 풀기
-- [ ] 미션 피드백 반영하기
+- [x] 알고리즘 한 문제 풀기
+- [x] 미션 피드백 반영하기
 
 오후
 
-- [ ] 통합 회원 테이블 설계
-- [ ] 모니터링 시도해보기
-- [ ] SpringBatch Cron 학습하기
+- [x] 통합 회원 테이블 설계
+- [x] 모니터링 시도해보기
+- [x] SpringBatch Cron 학습하기
 
 저녁
 
 ​	약속
+
+## 10월  7일
+
+오전
+- [ ] 토미의  수업
+
+오후
+- [ ] 스프링  학습 - 쓰레드로컬
+- [ ] 네트워크 학습 - L3 내용
+- [ ] 알고리즘 한 문제 풀기
+- [ ] 미션 피드백 오면 반영하기
