221006 앨버 계획 완료

--- a/앨버/10월3일~10월9일.md
+++ b/앨버/10월3일~10월9일.md
@@ -32,12 +32,10 @@
 
 # 10월 6일
 
-- [ ] 미션 완료 (8:00 ~ 9:40)
-- [ ] 잉한테 백엔드 작업 알려주기 (10:30 ~ 11:00)
-- [ ] 팀문화 작성 (13:00 ~ )
-- [ ] 공부 (1시간)
-- [ ] 프로젝트 정리 (30분)
-- [ ] 키워드 정리 (30분)
-- [ ] 면접 스터디 (19:00 ~ 20:00)
-- [ ] 짧은 회고 (10분)
-- [ ] prolog (1시간)
+- [x] 미션 완료 (8:00 ~ 9:40)
+- [x] 잉한테 백엔드 작업 알려주기 (10:30 ~ 11:00)
+- [x] 팀문화 작성 (13:00 ~ )
+- [x] 공부 (1시간)
+- [x] 프로젝트 정리 (30분)
+- [x] 키워드 정리 (30분)
+- [x] 짧은 회고 (10분)
