--- a/앨버/10월3일~10월9일.md
+++ b/앨버/10월3일~10월9일.md
@@ -39,3 +39,20 @@
 - [x] 프로젝트 정리 (30분)
 - [x] 키워드 정리 (30분)
 - [x] 짧은 회고 (10분)
+
+
+# 10월 7일
+
+- [ ] 타입스크립트 미션 (1:20 ~ 4:30)
+- [ ] 공수타
+- [ ] 포비 면담 (4:30 ~ 6:00) + 밧드 리뷰
+
+
+## 주말에 할 일
+
+- [ ] 준찌가 준 task 조사해서 공유하기
+- [ ] 미션 코드 작성 보안
+- [ ] prolog 기능 완성하기
+- [ ] 미션 (8시간 - 에러 핸들링)
+- [ ] 반상회 과제
+- [ ] 포트폴리오 완성
