--- a/앨버/10월3일~10월9일.md
+++ b/앨버/10월3일~10월9일.md
@@ -43,16 +43,20 @@
 
 # 10월 7일
 
-- [ ] 타입스크립트 미션 (1:20 ~ 4:30)
-- [ ] 공수타
-- [ ] 포비 면담 (4:30 ~ 6:00) + 밧드 리뷰
+- [x] 타입스크립트 미션 (1:20 ~ 4:30)
+- [x] 공수타
+- [x] 포비 면담 (4:30 ~ 6:00) + 밧드 리뷰
+
+# 10월 8일
+
+- [ ] 프로젝트 (5시간 - 에러 핸들링) 
+- [ ] 반상회 과제
+- [ ] 타입스크립트 미션 채워넣기 (1시간 30분)
+- [ ] 프롤로그 완성 (2시간)
 
 
 ## 주말에 할 일
 
 - [ ] 준찌가 준 task 조사해서 공유하기
 - [ ] 미션 코드 작성 보안
-- [ ] prolog 기능 완성하기
-- [ ] 미션 (8시간 - 에러 핸들링)
-- [ ] 반상회 과제
-- [ ] 포트폴리오 완성
+- [ ] 포트폴리오 완성 
