--- a/앨버/10월3일~10월9일.md
+++ b/앨버/10월3일~10월9일.md
@@ -47,12 +47,12 @@
 - [x] 공수타
 - [x] 포비 면담 (4:30 ~ 6:00) + 밧드 리뷰
 
-# 10월 8일
+# 10월 9일
 
-- [ ] 프로젝트 (5시간 - 에러 핸들링) 
-- [ ] 반상회 과제
-- [ ] 타입스크립트 미션 채워넣기 (1시간 30분)
-- [ ] 프롤로그 완성 (2시간)
+- [ ] 프로젝트 (4시간 - 에러 핸들링) 
+- [ ] 반상회 과제 (1시간)
+- [ ] 타입스크립트 미션 채워넣기 (1시간)
+- [ ] 프롤로그 (1시간)
 
 
 ## 주말에 할 일
