221009 앨버 계획 완료

--- a/앨버/10월3일~10월9일.md
+++ b/앨버/10월3일~10월9일.md
@@ -49,14 +49,14 @@
 
 # 10월 9일
 
-- [ ] 프로젝트 (4시간 - 에러 핸들링) 
-- [ ] 반상회 과제 (1시간)
-- [ ] 타입스크립트 미션 채워넣기 (1시간)
-- [ ] 프롤로그 (1시간)
+- [x] 프로젝트 (4시간 - 에러 핸들링) 
+- [x] 반상회 과제 (1시간)
+- [x] 타입스크립트 미션 채워넣기 (1시간)
+- [x] 프롤로그 (1시간)
 
 
 ## 주말에 할 일
 
 - [ ] 준찌가 준 task 조사해서 공유하기
 - [ ] 미션 코드 작성 보안
-- [ ] 포트폴리오 완성 
+- [ ] 포트폴리오 완성
