--- a/앨버/10월10일 ~ 10월17일.md
+++ b/앨버/10월10일 ~ 10월17일.md
@@ -1,8 +1,25 @@
 # 10월 10일
 
-- [ ] 면담 카드 작성
-- [ ] 프로젝트 에러 핸들링 (3시간)
-- [ ] 프롤로그 임시저장 (2시간)
+- [x] 면담 카드 작성
+- [x] 프로젝트 에러 핸들링 (3시간)
+- [x] 프롤로그 임시저장 (2시간)
 - [ ] 블로그 업로드
+- [x] 공부 (1시간)
+- [ ] 프로젝트 정리 (30분)
+
+# 10월 11일
+
+(오전 일과)
+- [ ] 블로그 업로드 (type vs interface)
+
+(오후 일과)
+- [ ] 프로젝트 회의 - README, 남은 스프린트 회의등 (13:00 ~ 15:00)
+- [ ] 프롤로그 회의 (15:00 ~ 16:00)
+- [ ] 프론트 회의 (16:00 ~ 17:00)
+- [ ] 면담 (17:00 ~ 17:30)
+- [ ] 프롤로그 임시 저장 (19:00 ~ 20:00)
+
+(20:00 ~ 22:00)
 - [ ] 공부 (1시간)
 - [ ] 프로젝트 정리 (30분)
+- [ ] 키워드 정리 (30분)
