[파랑] 10월 7일 계획온료

--- a/파랑/10월3일~10월9일.md
+++ b/파랑/10월3일~10월9일.md
@@ -28,8 +28,8 @@
 할 게 많아서 힘들었는데 어이 없어서 웃겼다. 얼마나 좋은 일이 생기려고 이러는지🧐. 
 
 ### 10월 7일 (금)
-- [ ] 백엔드 강의
-- [ ] 달록 timestamp -> datetime dev db 마이그레이션
-- [ ] 미션 리뷰 반영
-- [ ] 근로 자동채점 2번째 이슈 마무리
-- [ ] 16시 근로 자동채점 QA 리스트 만들기
+- [x] 백엔드 강의
+- [x] 달록 timestamp -> datetime dev db 마이그레이션
+- [x] 미션 리뷰 반영
+- [x] 근로 자동채점 2번째 이슈 마무리
+- [x] 16시 근로 자동채점 QA 리스트 만들기
