221012 앨버 계획 부분완료

--- a/앨버/10월10일 ~ 10월17일.md
+++ b/앨버/10월10일 ~ 10월17일.md
@@ -10,16 +10,17 @@
 # 10월 11일
 
 (오전 일과)
-- [ ] 블로그 업로드 (type vs interface)
+- [x] 블로그 업로드 (type vs interface)
 
 (오후 일과)
-- [ ] 프로젝트 회의 - README, 남은 스프린트 회의등 (13:00 ~ 15:00)
-- [ ] 프롤로그 회의 (15:00 ~ 16:00)
-- [ ] 프론트 회의 (16:00 ~ 17:00)
-- [ ] 면담 (17:00 ~ 17:30)
-- [ ] 프롤로그 임시 저장 (19:00 ~ 20:00)
+- [x] 프로젝트 회의 - README, 남은 스프린트 회의등 (13:00 ~ 15:00)
+- [x] 프롤로그 회의 (15:00 ~ 16:00)
+- [x] 프론트 회의 (16:00 ~ 17:00)
+- [x] 면담 (17:00 ~ 17:30)
+- [x] 프롤로그 임시 저장 (19:00 ~ 20:00)
 
 (20:00 ~ 22:00)
 - [ ] 공부 (1시간)
 - [ ] 프로젝트 정리 (30분)
 - [ ] 키워드 정리 (30분)
+- [x] 끝날때 까지 미션!!
