--- a/앨버/10월10일 ~ 10월17일.md
+++ b/앨버/10월10일 ~ 10월17일.md
@@ -24,3 +24,12 @@
 - [ ] 프로젝트 정리 (30분)
 - [ ] 키워드 정리 (30분)
 - [x] 끝날때 까지 미션!!
+
+
+# 10월 12일
+
+- [ ] 프로젝트 에러핸들링(PR까지)
+- [ ] 미션 댓글 답변 및 2단계 진행 (10:30 ~12:00)
+- [ ] 프롤로그 임시 저장 (2시간)
+- [ ] 미션 2단계 진행 (13:00 ~ )
+- [ ] 프로젝트 (3시간)
