--- a/앨버/10월10일~10월17일.md
+++ b/앨버/10월10일~10월17일.md
@@ -28,8 +28,16 @@
 
 # 10월 12일
 
-- [ ] 프로젝트 에러핸들링(PR까지)
-- [ ] 미션 댓글 답변 및 2단계 진행 (10:30 ~12:00)
-- [ ] 프롤로그 임시 저장 (2시간)
-- [ ] 미션 2단계 진행 (13:00 ~ )
-- [ ] 프로젝트 (3시간)
+- [x] 프로젝트 에러핸들링(PR까지)
+- [x] 미션 댓글 답변 및 2단계 진행 (10:30 ~12:00)
+- [x] 미션 2단계 진행 (13:00 ~ )
+- [x] 프로젝트 (3시간)
+
+
+# 10월 13일
+
+- [ ] 스터디 (18:30 ~ 19:30)
+- [ ] 절대 경로 설정 (1시간)
+- [ ] import 자동 정렬 (1시간)
+- [ ] 프로젝트 정리(30분)
+- [ ] 공부 (1시간)
