221013 앨버 계획 부분 완료

--- a/앨버/10월10일~10월17일.md
+++ b/앨버/10월10일~10월17일.md
@@ -36,8 +36,7 @@
 
 # 10월 13일
 
-- [ ] 스터디 (18:30 ~ 19:30)
+- [x] 스터디 (18:30 ~ 19:30)
 - [ ] 절대 경로 설정 (1시간)
 - [ ] import 자동 정렬 (1시간)
-- [ ] 프로젝트 정리(30분)
-- [ ] 공부 (1시간)
+- [x] 프로젝트 정리(30분)
