--- a/파랑/10월10일~10월16일.md
+++ b/파랑/10월10일~10월16일.md
@@ -1,18 +1,27 @@
 ### 10월 13일 (목)
-- [ ] 달록 PR 리뷰
-- [ ] 미션 오리 PR 리뷰
-- [ ] 달록 구글 사이트 문구 및 내용 생각하기
-- [ ] 달록 Spring 시간 변경
-- [ ] 14시 매트 테코톡
-- [ ] 15시 달록 회의
-- [ ] 16시 근로 회의
-- [ ] 달록 배포
-- [ ] 달록 QA 리스트 작성
+- [x] 달록 PR 리뷰
+- [x] 달록 구글 사이트 문구 및 내용 생각하기
+- [x] 14시 매트 테코톡
+- [x] 15시 달록 회의
+- [x] 16시 근로 회의
+- [x] 달록 Spring 시간 변경
+- [x] 달록 배포
+- [x] 미션 오리 PR 리뷰
+- [x] 달록 QA 리스트 작성
 
 ### 10월 14일 (금)
-- [ ] 미션 리뷰 반영
-- [ ] 달록 1000만명 기획 및 아키텍처 생각하기
-- [ ] 14시 달록 회의
-- [ ] 달록 QA
-- [ ] transaction 수업 다시 듣기
-- [ ] transaction 공부하기
+- [x] 백엔드 강의
+- [x] 미션 리뷰 반영
+- [x] 달록 1000만명 기획 및 아키텍처 생각하기
+- [x] 14시 달록 회의
+- [x] 달록 QA
+- [x] 달록 Spring 시간 변경 PR
+- [x] transaction 수업 다시 듣기
+
+### 10월 15일 (토)
+- [x] 11시 필라테스
+- [x] 2시 백엔드 QA 이슈 정리 및 배분
+
+### 10월 16일 (일)
+- [x] 달록 무중단 배포
+- [x] time zone 설정 문제 파기
