[앨버] 10월 13일 계획 (#945)
* 221001 앨버 계획

* 221001 앨버 계획 완료 & 221002 앨버 계획

* 221003 앨버 계획

* 221004 앨버 계획

* 221004 앨버 계획 완료

* 221005 앨버 계획

* 221005 앨버 계획 추가

* 221006 앨버 계획

* 221006 앨버 계획 완료

* 221007 앨버 계획

* 221009 앨버 계획

* 221009 앨버 계획

* 221009 앨버 계획 완료

* 221010 앨버 계획

* 221011 앨버 계획

* 221012 앨버 계획 부분완료

* 221012 앨버 계획

* 221013 앨버 계획

* 221013 앨버 계획 부분 완료

--- a/앨버/9월28일~10월2일.md
+++ b/앨버/9월28일~10월2일.md
@@ -20,14 +20,31 @@
 # 9월 30일
 
 - [x] 프로젝트 (3시간) - 테스트
-- [ ] typescript interface vs type 공부 (1시간)
 - [x] 블로그 업로드 + http 내용 보충 (1시간)
 - [x] 자바스크립트 공부 (20분)
 - [x] 프로젝트 정리 (30분)
 - [x] 키워드 정리 (30분)
 - [x] 회고 (산책)
 
+# 10월 1일
 
+- [x] 프로젝트 (4시간) - 테스트
+- [x] prolog (2시간)
+- [x] typescript interface vs type 공부 - 우아한 반상회(2시간)
+- [ ] 자바스크립트 공부 (1시간)
+- [x] 프로젝트 정리 (30분)
+- [x] 키워드 정리 (30분)
+
+
+# 10월 2일
+
+- [ ] 프로젝트 (3시간) - 테스트
+- [ ] prolog (1시간)
+- [ ] typescript interface vs type 공부 - 우아한 반상회(2시간)
+- [ ] 자바스크립트 공부 (1시간)
+- [x] 프로젝트 정리 (30분)
+- [ ] 키워드 정리 (30분)
+ 
 
 ## 주말에 할 일
 - [ ] typescript 관련해서 정리해서 머릿속에 넣어야함 (다음주부터는 웹 접근성 해야되기 때문)
