[아서] 10월 25일 계획

--- a/아서/10월 24일~10월30일.md
+++ b/아서/10월 24일~10월30일.md
@@ -8,3 +8,20 @@
   - CGLIB 프록시
   - ProxyFactory
 - [ ] 저녁 약속
+
+
+
+## 10월 25일
+
+오전
+
+- [ ] 리팩터링 수업
+
+오후
+
+- [ ] 알고리즘 1개 풀기
+- [ ] 프록시 포스팅
+
+저녁
+
+- [ ] 이력서 작성
