[아서] 10월 28일 계획 (#958)

--- a/아서/10월 24일~10월30일.md
+++ b/아서/10월 24일~10월30일.md
@@ -1,13 +1,13 @@
 ## 10월 24일
 
-- [ ] 글쓰기 리뷰하기
-- [ ] 1단계 미션 제출하기
-- [ ] 프록시 정리하기
+- [x] 글쓰기 리뷰하기
+- [x] 1단계 미션 제출하기
+- [x] 프록시 정리하기
   - 프록시 패턴
   - JDK 동적 프록시
   - CGLIB 프록시
   - ProxyFactory
-- [ ] 저녁 약속
+- [x] 저녁 약속
 
 
 
